Fixed alignment issue with the curly braces in the navbar links.

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -40,7 +40,7 @@ footer {
 
                         #github-username {
                             font-size: 1.5em;
-                            font-family: "Lucida Console", Monaco, monospace;
+                            font-family: $console-font;
                         }
                     }
                 }
